--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -97,6 +97,11 @@
   "ContentSearch": {
     "Ocp-Apim-Subscription-Key": ""
   },
+  "DeepSearch": {
+    "endpoint" : "",
+    "authKey": "",
+    "isEnabled" : ""
+  },
   "ApplensTemporaryAccess": {
     "Endpoint": "",
     "Key": "",
