Removed console log statements and updated App Setting isEnabled for Deep Search

--- a/ApplensBackend/appsettings.json
+++ b/ApplensBackend/appsettings.json
@@ -100,7 +100,7 @@
   "DeepSearch": {
     "endpoint" : "",
     "authKey": "",
-    "isEnabled" : ""
+    "isEnabled" : "false"
   },
   "ApplensTemporaryAccess": {
     "Endpoint": "",
