--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -28,7 +28,7 @@
   "DeepSearch": {
     "endpoint" : "",
     "authKey": "",
-    "isEnabled" : "true"
+    "isEnabled" : "false"
   },
   "ApplicationInsights": {
     "InstrumentationKey": ""
